# sign-to-migrate

./: Makefile
cleansing/: pyproject.toml
cleansing/cleansing/: merge.py
cleansing/tests/: test_cost_of_living.py  test_merge.py
collection/: pyproject.toml
collection/collection/: cost_of_living.py  cpi.py  happiness.py  labor.py  task.py
collection/tests/: test_cost_of_living.py  test_cpi.py  test_happiness.py  test_labor.py  test_lib.py  test_living_of_cost.py
data/: cost_of_living.json  cost_of_living_cleansed.json  merged.json
explore/explore/: playground.ipynb
server-side/: pyproject.toml
