[tool.poetry]
name = "cleansing"
version = "0.1.0"
description = ""
authors = ["Yoichi Ojima <yoichiojima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
collection = {path = "../collection", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
