[tool.poetry]
name = "collection"
version = "0.1.0"
description = ""
authors = ["Yoichi Ojima <yoichiojima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
kagglehub = "^0.3.4"
python-dotenv = "^1.0.1"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.1"
pandas = "^2.2.3"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 127